--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -3,15 +3,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Mushyroll</title>
+    <title>Mushyroll - Crunchyroll Mock</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-</head>
+    <link rel="icon" 
+    type="image/png"  href="img/mushyroll.png">
+  </head>
  
 <body>
 <ul class="nav justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="/">mushyroll</a>
-    </li>
+    <a class="navbar-brand" href="/">
+    <img src="img/mushyroll.png" width="30" height="30" alt="mushybrand">
+    Mushyroll
+  </a>
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="/shows">Shows</a>
       </li>
