--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -5,21 +5,33 @@
     <meta charset="utf-8">
     <title>Mushyroll - Crunchyroll Mock</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="icon" 
-    type="image/png"  href="img/mushyroll.png">
+    <link rel="icon" type="image/png"  href="img/mushyroll.png">
+    <link rel="stylesheet" href="css/main.css">
   </head>
  
 <body>
+  <div class="body">
 <ul class="nav justify-content-center">
     <a class="navbar-brand" href="/">
-    <img src="img/mushyroll.png" width="30" height="30" alt="mushybrand">
-    Mushyroll
+    <img src="img/Crunchyroll-nav-brand.jpg" height="60" alt="mushybrand">
   </a>
     <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/shows">Shows</a>
+        <a class="nav-link active" aria-current="page" href="/shows"> <h5>Shows</h5></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/manga">Manga</a>
+        <a class="nav-link active" aria-current="page" href="/manga"> <h5>Manga</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/manga"><h5>News</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/manga"><h5>Games</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/manga"><h5>Store</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/manga"><h5>Premium</h5></a>
       </li>
     <li class="nav-item">
       <a class="nav-link disabled" tabindex="-1" aria-disabled="true" href="/login">Login</a>
