Added the commonly seen ad strip below the nav bar for games/shows on the OG site

--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -10,7 +10,6 @@
   </head>
  
 <body>
-  <div class="body">
 <ul class="nav justify-content-center">
     <a class="navbar-brand" href="/">
     <img src="img/Crunchyroll-nav-brand.jpg" height="60" alt="mushybrand">
@@ -36,6 +35,10 @@
     <li class="nav-item">
       <a class="nav-link disabled" tabindex="-1" aria-disabled="true" href="/login">Login</a>
     </li>
-  </ul>
- 
+  </ul>.
+  <div class="ad">
+    <img src="img/crunchy-ad.png" alt="show ad">
+
+  </div>
+  
 <div class="container">
