--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,13 +16,29 @@
     padding: .75rem .75rem;
 }
 
+.ad {
+    grid-area: ad;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+.ad img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
+}
+
 .body {
     display: grid;
     height: 100vh;
     grid-template-columns: 20%, 60%, 20%;
-    grid-template-rows: 8% 92%;
+    grid-template-rows: 8% 5% 87%;
     grid-template-areas: 
     ". nav ."
+    "ad ad ad"
     ". container .";
 }
 
