Changed navbar and added image of cancer doctor with patient

--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -3,42 +3,21 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Mushyroll - Crunchyroll Mock</title>
+    <title>TopMedicsBX</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="icon" type="image/png"  href="img/mushyroll.png">
+    <link rel="icon" type="image/png"  href="img/tmb-fav.png">
     <link rel="stylesheet" href="css/main.css">
   </head>
  
 <body>
-<ul class="nav justify-content-center">
-    <a class="navbar-brand" href="/">
-    <img src="img/Crunchyroll-nav-brand.jpg" height="60" alt="mushybrand">
-  </a>
-    <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/shows"> <h5>Shows</h5></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/manga"> <h5>Manga</h5></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/manga"><h5>News</h5></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/manga"><h5>Games</h5></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/manga"><h5>Store</h5></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/manga"><h5>Premium</h5></a>
-      </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" tabindex="-1" aria-disabled="true" href="/login">Login</a>
-    </li>
-  </ul>.
-  <div class="ad">
-    <img src="img/crunchy-ad.png" alt="show ad">
-
-  </div>
-  
-<div class="container">
+  <header>
+    <a href="/" class="logo"><img src="img/top-medics-bx.png" class="logo" href="/" alt="logo"></a>
+    <nav>
+      <ul class="nav-items">
+        <li><a href="/faq">FAQ</a></li>
+        <li><a href="/services">Services</a></li>
+      </ul>
+    </nav>
+    <a class="cta" href="#"><button>Contact</button></a>
+  </header>
+  <div class="container">
