--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,5 +1,11 @@
 <%- include ("../_partials/_header.ejs"); %>
-
-    <h1>HOME/LANDING Page!</h1>
-    
+    <div class="photo-container">
+        <img src="img/tmb-doctor-stock1.jpg" alt="doctor">
+    </div>
+    <div class=content>
+        <h3>Hello,</h3>
+        <h1>Welcome To</h1>
+        <h1>Top Medic Bx</h1>
+        <button type="button"> Take a tour</button>
+    </div>
 <%- include ("../_partials/_footer.ejs"); %> 
