--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,48 +1,91 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxanium&display=swap');
 
-.nav {
-    padding-top: 1%;
-    grid-area: nav;
+* {
+    margin: 0;
+    padding: 0;
 }
+
+li, a, button {
+    font-family: 'Oxanium', cursive;
+    font-weight: 500;
+    font-size: 16px;
+    color: #fff;
+    text-decoration: none;
+}
+
+h1, h3 {
+    font-family: 'Oxanium', cursive;
+    font-weight: 800;
+}
+
+header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 30px 8%;
+    background-color: #EFF9FB;
+}
+
+button {
+    padding: 9px 30px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    background-color: rgba(0,136,169,1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: rgba(0,136,169,0.8);
+}
+
+.logo {
+    cursor: pointer;
+    margin-right: auto;
+}
+
+.logo img {
+    height: 80px;
+}
+
+.nav-items {
+    list-style: none;
+}
+
+.nav-items li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav-items li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav-items li a:hover {
+    color: #55c6c9;
+}
+
 
 .container {
-    grid-area: container;
+    max-width: 100%;
+    padding: 0%;
+    height: 90vh;
 }
 
-.nav-item {
-    margin-top: 1%;
+.content {
+    position:absolute;
+    top: 50%;
+    left: 8%;
 }
 
-.nav-link {
-    padding: .75rem .75rem;
-}
-
-.ad {
-    grid-area: ad;
+.photo-container {
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden
-}
-.ad img {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%
+    height: 40vh;
 }
 
-.body {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: 20%, 60%, 20%;
-    grid-template-rows: 8% 5% 87%;
-    grid-template-areas: 
-    ". nav ."
-    "ad ad ad"
-    ". container .";
-}
-
-h5 {
-    color:black;
-    font-weight:625;
+.photo-container img {
+    width: 100%;
+    object-fit: cover;
 }
