--- a/views/home/faq.ejs
+++ b/views/home/faq.ejs
@@ -1,5 +1,5 @@
 <%- include ("../_partials/_header.ejs"); %>
 
-    <h1>SHOWS PAGE</h1>
+    <h1>FAQ PAGE</h1>
 
 <%- include ("../_partials/_footer.ejs"); %> 
