--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,9 +3,9 @@
         <img src="img/tmb-doctor-stock1.jpg" alt="doctor">
     </div>
     <div class=content>
-        <h3>Hello,</h3>
         <h1>Welcome To</h1>
         <h1>Top Medic Bx</h1>
+        <h3>Discover the best medical professionals <br> of the Bronx</h3>
         <button type="button"> Take a tour</button>
     </div>
 <%- include ("../_partials/_footer.ejs"); %> 
