Changed landing page stock photo, made changes to button and fixed image object fit

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -4,8 +4,8 @@
     </div>
     <div class=content>
         <h1>Welcome To</h1>
-        <h1>Top Medic Bx</h1>
-        <h3>Discover the best medical professionals <br> of the Bronx</h3>
-        <button type="button"> Take a tour</button>
+        <h1>Top Medics Bx</h1>
+        <h3>Discover the best<br> medical professionals in the Bronx</h3>
+        <button type="button">Take a tour</button>
     </div>
 <%- include ("../_partials/_footer.ejs"); %> 
