--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,46 +7,50 @@
 
 li, a, button {
     font-family: 'Oxanium', cursive;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 16px;
-    color: #fff;
+    color: #000;
     text-decoration: none;
 }
 
 h1 {
     font-family: 'Oxanium', cursive;
-    font-weight: 1000;
+    font-weight: 600;
     font-size: 100px;
-    color: #083B66;
+    color: #000;
 }
 
 h3 {
     font-family: 'Oxanium', cursive;
     font-weight: 800;
+    color: #000;
 }
 
 header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 30px 8%;
+    padding: 15px 8%;
     background-color: #EFF9FB;
 }
 
 button {
     padding: 9px 30px;
-    margin-left: 20px;
+    margin-left: 5px;
     margin-bottom: 10px;
-    background-color: rgba(0,136,169,1);
+    background-color: #558dbb;
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
+    border-style:groove;
+    border-color:lightslategray;
 }
 
 button:hover {
     background-color: rgba(0,136,169,0.8);
 }
+
 
 .logo {
     cursor: pointer;
@@ -89,10 +93,11 @@ button:hover {
 
 .photo-container {
     width: 100%;
-    height: 40vh;
+    height: 90vh;
 }
 
 .photo-container img {
     width: 100%;
     object-fit: cover;
+    height: 100%;
 }
